modified:   9. Methods/Implementation/Returning a Result.ipynb

--- a/9. Methods/Implementation/Returning a Result.ipynb
+++ b/9. Methods/Implementation/Returning a Result.ipynb
@@ -44,7 +44,9 @@
     }
    },
    "source": [
-    "So far, we have been coming up with examples in which the Method does something like printing on the console, and nothing more.    \n",
+    "So far, we have been coming up with examples in which the Method does something like printing on the console, and nothing more. \n",
+    "   \n",
+    "As such, these examples all featured a return type of `void`.\n",
     "   \n",
     "Methods, however, usually do not just execute a simple code sequence, but in addition they often **return** results.   "
    ]
