modified:   9. Methods/Implementation/Returning a Result.ipynb

--- a/9. Methods/Implementation/Returning a Result.ipynb
+++ b/9. Methods/Implementation/Returning a Result.ipynb
@@ -419,6 +419,391 @@
    "source": [
     "<br>"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### The `return` Operator"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "To make a Method **return** a value, the keyword `return` must be placed in the Method’s body, followed by an expression that will be returned as a result by the Method.   \n",
+    "   \n",
+    "Respectively, the `method_result`, **must be the same type** as the `return_type`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "```c#\n",
+    "[access_modifer]  return_type  method_name( [parameters_list] ) \n",
+    "{\n",
+    "    \n",
+    "    // Some code that is preparing the method's result comes here;\n",
+    "    return method_result;\n",
+    "    \n",
+    "}\n",
+    "```"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Characteristics the `return` Operator"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The execution of `return` does *two things*: \n",
+    "- *Stops immediately the method execution.* \n",
+    "- *Returns the result of the executed method to the calling method.*  "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Branching `return` Statements"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "`return` statements can be called from several places in the code of our Method, but should be guaranteed that at least one of the `return` operators that we have used will be reached while executing the Method, as shown in the example given below:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "// Declare a method taking 2 Integer Parameters which returns as a string\n",
+    "static string CompareTo(int number1, int number2) \n",
+    "{\n",
+    "    // Implement conditional branching upon comparing\n",
+    "    // the two values designated as Parameters.\n",
+    "    // Depending on the outcome,\n",
+    "    // we'll return the appropriate corresponding value.\n",
+    "    if (number1 > number2) \n",
+    "        return $\"{number1} is higher than {number2}.\";\n",
+    " \n",
+    "    else if (number1 == number2) \n",
+    "        return $\"{number1} is equal to {number2}.\";\n",
+    "   \n",
+    "    else \n",
+    "        return $\"{number1} is lower than {number2}.\"; \n",
+    " }"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "By having used branching `return` statements in our implementation, we can dynamically shape our results based on the arguments we provide:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "3 is lower than 4."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "CompareTo( 3, 4 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "4 is equal to 4."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "CompareTo( 4, 4 )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "5 is higher than 4."
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "CompareTo( 5, 4 )"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Why Is the Returned Value Type not a Part of the Method Signature?"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "In C# it is not allowed to have several Methods that have equal name and parameters, but different type of returned value.   \n",
+    "   \n",
+    "This means that the following code will *fail to compile*:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "ename": "Error",
+     "evalue": "(7,15): error CS0111: Type 'Submission#23' already defines a member called 'Add' with the same parameter types",
+     "output_type": "error",
+     "traceback": [
+      "(7,15): error CS0111: Type 'Submission#23' already defines a member called 'Add' with the same parameter types"
+     ]
+    }
+   ],
+   "source": [
+    "static int Add(int number1, int number2)\n",
+    "{ \n",
+    "    return (number1 + number2);\n",
+    "}\n",
+    "\n",
+    "\n",
+    "static double Add(int number1, int number2) \n",
+    "{\n",
+    "    return (number1 + number2); \n",
+    "}"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The reason for this limitation is that the compiler doesn’t know which of both Methods must be invoked.    \n",
+    "   \n",
+    "Both Methods have the *same signature* (sequence of parameters along with their types).    \n",
+    "As such, note that the **return value** is *not* part of the method’s signature."
+   ]
   }
  ],
  "metadata": {
