modified:   9. Methods/Implementation/Returning a Result.ipynb

--- a/9. Methods/Implementation/Returning a Result.ipynb
+++ b/9. Methods/Implementation/Returning a Result.ipynb
@@ -197,7 +197,7 @@
    "source": [
     "When the Method is executed and returns a value, we can imagine that C# puts this value where this Method has been invoked from. Then, the program continues work with that value. \n",
     "     \n",
-    "Respectively, that returned value, we can use for any purpose from the calling Method."
+    "Respectively, that returned value, we can use for any purpose from the calling Method:"
    ]
   },
   {
