modified:   10. Recursion/An Overview.ipynb

--- a/10. Recursion/An Overview.ipynb
+++ b/10. Recursion/An Overview.ipynb
@@ -224,7 +224,7 @@
     }
    },
    "source": [
-    "Although it is intuitive, the present solution is one of the classical examples when the usage of recursion is *highly inefficient* as there are many excessive calculations (of one and the same element of the sequence) due to the recursive calls."
+    "Although it is intuitive, the solution above is one of the classical examples when the usage of recursion is *highly inefficient* as there are many excessive calculations (of one and the same element of the sequence) due to the recursive calls."
    ]
   },
   {
