modified:   10. Recursion/An Overview.ipynb

--- a/10. Recursion/An Overview.ipynb
+++ b/10. Recursion/An Overview.ipynb
@@ -2,7 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "metadata": {},
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
    "source": [
     "# 10. Recursion"
    ]
@@ -39,9 +46,7 @@
     "   \n",
     "**Recursion** is a programming technique in which a Method makes a call to itself to solve a particular problem. Such Methods are called **recursive**.   \n",
     "   \n",
-    "**Recursion** is a programming technique whose correct usage leads to elegant solutions to certain problems.    \n",
-    "   \n",
-    "Sometimes its usage could considerably simplify the programming code and its readability."
+    "**Recursion** is a programming technique whose correct usage leads to elegant solutions to certain problem. Sometimes its usage could considerably simplify the programming code and its readability."
    ]
   },
   {
@@ -303,6 +308,13 @@
      {
       "aliases": [],
       "name": "csharp"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "languageName": null,
+      "name": "vscode"
      }
     ]
    }
