modified:   10. Recursion/An Overview.ipynb

--- a/10. Recursion/An Overview.ipynb
+++ b/10. Recursion/An Overview.ipynb
@@ -230,7 +230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -285,7 +285,7 @@
     }
    ],
    "source": [
-    "// Not only does this take a reeeeally long time to execute. \n",
+    "// Not only does this size n take a reeeeally long time to compute (approx. 6 seconds), \n",
     "// each consecutive input larger than this will be exponentially slower!\n",
     "Fibonacci( 45 )"
    ]
@@ -304,13 +304,6 @@
      {
       "aliases": [],
       "name": "csharp"
-     },
-     {
-      "aliases": [
-       "frontend"
-      ],
-      "languageName": null,
-      "name": "vscode"
      }
     ]
    }
