modified:   10. Recursion/An Overview.ipynb

--- a/10. Recursion/An Overview.ipynb
+++ b/10. Recursion/An Overview.ipynb
@@ -289,6 +289,159 @@
     "// each consecutive input larger than this will be exponentially slower!\n",
     "Fibonacci( 45 )"
    ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Direct and Indirect Recursion"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "When, in the body of a Method, there is a call to the *same* Method,    \n",
+    "we say that the Method is **directly** **recursive**.   \n",
+    "   \n",
+    "If `Method A` calls `Method B`, `Method B` calls `Method C`, and `Method C` calls `Method A`,    \n",
+    "we call the `Methods A` , `B` and `C` ***indirectly*** **recursive** or ***mutually*** **recursive**.\n",
+    "   \n",
+    "Chains of calls in **indirect recursion** can contain multiple Methods, in addition to conditonal branches."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Creating Recursive Methods"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "When we create **recursive** methods, it is necessary that we break the task we are trying to solve in **subtasks**, for the solution of which we can use the same algorithm (**recursively**). \n",
+    "   \n",
+    "The ***combination of solutions*** of ***all* subtasks** should lead to the solution of the *initial* problem.\n",
+    "   \n",
+    "In each **recursive** call, the problem area should be limited so that, at some point, the *bottom of the recursion* is reached."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Bottom of Recursion"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "When using **recursion**, we have to be totally sure that after a certain count of steps we get a concrete result.    \n",
+    "   \n",
+    "For this reason we should have one or more cases in which the solution could be found directly, without a **recursive** call. These cases are called **bottom of recursion**.\n",
+    "\n",
+    "In the example with Fibonacci numbers, the bottom of **recursion** is when `n` is less than or equal to `2`.    \n",
+    "  \n",
+    "In this **base case** we can directly return result without making **recursive** calls, because by definition the first two elements of the sequence of Fibonacci are equal to `1`.\n",
+    "   \n",
+    "If a **recursive** method has ***no*** **base case**, i.e. ***bottom***, it will become *infinite* and the result will be a `StackOverflowException`."
+   ]
   }
  ],
  "metadata": {
