modified:   10. Recursion/An Overview.ipynb

--- a/10. Recursion/An Overview.ipynb
+++ b/10. Recursion/An Overview.ipynb
@@ -43,7 +43,10 @@
    },
    "source": [
     "We call an object **recursive** if it *contains itself*, or if it is *defined by itself*.  \n",
-    "**Recursion** is a programming technique in which a Method makes a call to itself to solve a particular problem. Such Methods are called **recursive**.   \n",
+    "**Recursion** is a programming technique in which a Method makes a call to itself to solve a particular problem. \n",
+    "   \n",
+    "Such Methods are called **recursive**.   \n",
+    "   \n",
     "**Recursion** is a programming technique whose correct usage leads to elegant solutions to certain problem. Sometimes its usage could considerably simplify the programming code and its readability."
    ]
   },
