modified:   10. Recursion/An Overview.ipynb

--- a/10. Recursion/An Overview.ipynb
+++ b/10. Recursion/An Overview.ipynb
@@ -47,7 +47,8 @@
     "   \n",
     "Such Methods are called **recursive**.   \n",
     "   \n",
-    "**Recursion** is a programming technique whose correct usage leads to elegant solutions to certain problem. Sometimes its usage could considerably simplify the programming code and its readability."
+    "**Recursion** is a programming technique whose correct usage leads to elegant solutions to certain problem.    \n",
+    "Sometimes its usage could considerably simplify the programming code and its readability."
    ]
   },
   {
