modified:   10. Recursion/An Overview.ipynb

--- a/10. Recursion/An Overview.ipynb
+++ b/10. Recursion/An Overview.ipynb
@@ -81,7 +81,7 @@
     "Let’s consider the **Fibonacci** numbers.  \n",
     "These are the elements of the following sequence: `1`, `1`, `2`, `3`, `5`, `8`, `13`, `21`, `34`, `55`, `89`, `144`, `…`   \n",
     "Each element of the sequence is formed by the *sum* of the *previous two elements*. \n",
-    "The first two elements are equal to `1` by definition, i.e. the next two rules apply:\n",
+    "The first two elements are equal to `1`, and, by definition, the next two rules apply:\n",
     "   \n",
     "$F_1 = F_2 = 1$   \n",
     "$F_i = F_{i-1} + F_{i-2} \\qquad(\\text{for i > 2})$"
