modified:   10. Recursion/An Overview.ipynb

--- a/10. Recursion/An Overview.ipynb
+++ b/10. Recursion/An Overview.ipynb
@@ -340,7 +340,7 @@
     "we say that the Method is **directly** **recursive**.   \n",
     "   \n",
     "If `Method A` calls `Method B`, `Method B` calls `Method C`, and `Method C` calls `Method A`,    \n",
-    "we call the `Methods A` , `B` and `C` ***indirectly*** **recursive** or ***mutually*** **recursive**.\n",
+    "we call the `Methods A` , `B` and `C` **indirectly** **recursive** or **mutually** **recursive**.\n",
     "   \n",
     "Chains of calls in **indirect recursion** can contain multiple Methods, in addition to conditonal branches."
    ]
