modified:   10. Recursion/An Overview.ipynb

--- a/10. Recursion/An Overview.ipynb
+++ b/10. Recursion/An Overview.ipynb
@@ -389,7 +389,7 @@
    "source": [
     "When we create **recursive** methods, it is necessary that we break the task we are trying to solve in **subtasks**, for the solution of which we can use the same algorithm (**recursively**). \n",
     "   \n",
-    "The ***combination of solutions*** of ***all* subtasks** should lead to the solution of the *initial* problem.\n",
+    "The **combination of solutions** of **all subtasks** should lead to the solution of the *initial* problem.\n",
     "   \n",
     "In each **recursive** call, the problem area should be limited so that, at some point, the *bottom of the recursion* is reached."
    ]
