modified:   10. Recursion/An Overview.ipynb

--- a/10. Recursion/An Overview.ipynb
+++ b/10. Recursion/An Overview.ipynb
@@ -444,7 +444,7 @@
     "  \n",
     "In this **base case** we can directly return result without making **recursive** calls, because by definition the first two elements of the sequence of Fibonacci are equal to `1`.\n",
     "   \n",
-    "If a **recursive** method has ***no*** **base case**, i.e. ***bottom***, it will become *infinite* and the result will be a `StackOverflowException`."
+    "If a **recursive** method has **no** **base case**, i.e. ***bottom***, it will become *infinite* and the result will be a `StackOverflowException`."
    ]
   }
  ],
