modified:   10. Recursion/An Overview.ipynb

--- a/10. Recursion/An Overview.ipynb
+++ b/10. Recursion/An Overview.ipynb
@@ -406,21 +406,6 @@
     }
    },
    "source": [
-    "<br>"
-   ]
-  },
-  {
-   "attachments": {},
-   "cell_type": "markdown",
-   "metadata": {
-    "dotnet_interactive": {
-     "language": "csharp"
-    },
-    "polyglot_notebook": {
-     "kernelName": "csharp"
-    }
-   },
-   "source": [
     "#### Bottom of Recursion"
    ]
   },
@@ -445,6 +430,344 @@
     "In this **base case** we can directly return result without making **recursive** calls, because by definition the first two elements of the sequence of Fibonacci are equal to `1`.\n",
     "   \n",
     "If a **recursive** method has **no** **base case**, i.e. **bottom**, it will become *infinite* and the result will be a `StackOverflowException`."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "### Example: The Recursive Calculation of Factorial"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The usage of **recursion** we will illustrate with a classic example – recursive calculation of **factorial**.\n",
+    "**Factorial** of `n` (written `n!`) is the product of all integers between `1` and `n` inclusive.   \n",
+    "   \n",
+    "By definition, $0!$ = $1$.   \n",
+    "   \n",
+    "$n!$ = $1 \\times 2 \\times 3 \\times \\dots \\times n$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Defining the Recurrent Definition"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "When creating our solution, it is much more convenient to use the corresponding **recurrent definition** of **factorial**:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "$n! = 1$, for $n = 0$   \n",
+    "$n! = n \\times (n-1)!$, $\\qquad$ $\\text{for }n > 0$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "##### Finding a Recurrent Dependence"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The presence of recurrent dependence is not always obvious. Sometimes we have to find it ourselves. \n",
+    "   \n",
+    "In our case we can do this by analyzing the problem and calculating the values of the **factorial** for the first few integers."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "$0! = 1 $    \n",
+    "$1! = 1 = 1 \\times 1 = 1 \\times 0! $   \n",
+    "$2! = 2 \\times 1 = 2 \\times 1! $   \n",
+    "$3! = 3 \\times 2 \\times 1 = 3 \\times 2! $   \n",
+    "$4! = 4 \\times 3 \\times 2 \\times 1 = 4 \\times 3! $   \n",
+    "$5! = 5 \\times 4 \\times 3 \\times 2 \\times 1 = 5 \\times 4!$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "From here, you can easily see the **recurrent dependence**:"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "$n! = n \\times (n-1)!$"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "#### Algorithm Implementation"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "The **bottom** of our **recursion** is the simplest case `n = 0`, in which the value of the **factorial** is `1`.   \n",
+    "   \n",
+    "In the other cases we solve the problem for `n-1` and multiply the result by `n`.      \n",
+    "Thus after a certain count of steps we are definitely going to reach the bottom of the **recursion**,    \n",
+    "because between `0` and `n` there is a certain count of integer numbers.  \n",
+    "\n",
+    "Once we have these substantial conditions we can write a Method, which computes **factorial**:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "static decimal Factorial( int n )\n",
+    "{\n",
+    "\n",
+    "    // Specify the base case that represents the bottom of the recursion\n",
+    "    if( n == 0 )\n",
+    "        return 1;\n",
+    "\n",
+    "\n",
+    "    // If the base case is not satisfied, continue on to the next recursive \"subtask\"  \n",
+    "    else return n * Factorial( n - 1 );\n",
+    "\n",
+    "}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    },
+    "vscode": {
+     "languageId": "polyglot-notebook"
+    }
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n  = 5\n",
+      "n! = 120\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "Console.WriteLine(\n",
+    "    \"n  = 5\" \n",
+    "    + \n",
+    "    \"\\n\"\n",
+    "    + \n",
+    "    $\"n! = { Factorial( 5 ) }\"\n",
+    ");"
    ]
   }
  ],
