--- a/10. Recursion/The Anatomy of Recursion.ipynb
+++ b/10. Recursion/The Anatomy of Recursion.ipynb
@@ -43,7 +43,7 @@
    },
    "source": [
     "We call an object **recursive** if it *contains itself*, or if it is *defined by itself*.  \n",
-    "**Recursion** is a programming technique in which a Method makes a call to itself to solve a particular problem. \n",
+    "**Recursion** is a programming technique in which a Method makes a call to *itself* to solve a particular problem. \n",
     "   \n",
     "Such Methods are called **recursive**.   \n",
     "   \n",
@@ -392,6 +392,21 @@
     "The **combination of solutions** of **all subtasks** should lead to the solution of the *initial* problem.\n",
     "   \n",
     "In each **recursive** call, the problem area should be limited so that, at some point, the *bottom of the recursion* is reached."
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {
+    "dotnet_interactive": {
+     "language": "csharp"
+    },
+    "polyglot_notebook": {
+     "kernelName": "csharp"
+    }
+   },
+   "source": [
+    "<br>"
    ]
   },
   {
@@ -782,8 +797,72 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [],
+      "aliases": [
+       "c#",
+       "C#"
+      ],
+      "languageName": "C#",
       "name": "csharp"
+     },
+     {
+      "aliases": [
+       "frontend"
+      ],
+      "name": "vscode"
+     },
+     {
+      "aliases": [],
+      "name": ".NET"
+     },
+     {
+      "aliases": [
+       "f#",
+       "F#"
+      ],
+      "languageName": "F#",
+      "name": "fsharp"
+     },
+     {
+      "aliases": [],
+      "languageName": "HTML",
+      "name": "html"
+     },
+     {
+      "aliases": [
+       "js"
+      ],
+      "languageName": "JavaScript",
+      "name": "javascript"
+     },
+     {
+      "aliases": [],
+      "languageName": "KQL",
+      "name": "kql"
+     },
+     {
+      "aliases": [],
+      "languageName": "Mermaid",
+      "name": "mermaid"
+     },
+     {
+      "aliases": [
+       "powershell"
+      ],
+      "languageName": "PowerShell",
+      "name": "pwsh"
+     },
+     {
+      "aliases": [],
+      "languageName": "SQL",
+      "name": "sql"
+     },
+     {
+      "aliases": [],
+      "name": "value"
+     },
+     {
+      "aliases": [],
+      "name": "webview"
      }
     ]
    }
