modified:   10. Recursion/Recursion vs Iteration.ipynb

--- a/10. Recursion/Recursion vs Iteration.ipynb
+++ b/10. Recursion/Recursion vs Iteration.ipynb
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -55,8 +55,8 @@
    },
    "outputs": [],
    "source": [
-    "// A RECURSIVE implementation   \n",
-    "static decimal Factorial( int n )\n",
+    "// A RECURSIVE Factorial implementation   \n",
+    "static decimal RecursiveFactorial( int n )\n",
     "{\n",
     "\n",
     "    // Test for the base case that represents the bottom of the recursion\n",
@@ -65,7 +65,7 @@
     "\n",
     "    // Otherwise,\n",
     "    // If the base case is not satisfied, continue on to the next recursive \"subtask\"  \n",
-    "    else return n * Factorial( n - 1 );\n",
+    "    else return n * RecursiveFactorial( n - 1 );\n",
     "\n",
     "}"
    ]
@@ -120,7 +120,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {
     "dotnet_interactive": {
      "language": "csharp"
@@ -135,7 +135,7 @@
    "outputs": [],
    "source": [
     "// An ITERATIVE implementation\n",
-    "static decimal Factorial( int n )\n",
+    "static decimal IterativeFactorial( int n )\n",
     "{\n",
     "\n",
     "    // Allocate a decimal type Factorial Accumulator \n",
@@ -172,19 +172,8 @@
     "defaultKernelName": "csharp",
     "items": [
      {
-      "aliases": [
-       "c#",
-       "C#"
-      ],
-      "languageName": "C#",
+      "aliases": [],
       "name": "csharp"
-     },
-     {
-      "aliases": [
-       "frontend"
-      ],
-      "languageName": null,
-      "name": "vscode"
      }
     ]
    }
